# quick-switcher

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx  Settings.css  Settings.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/quick-switcher/: config.json
src-tauri/src/: kwin.rs  lib.rs  main.rs  search.rs
